--- a/trunk/javahexeditor/ReleaseNotes.txt
+++ b/trunk/javahexeditor/ReleaseNotes.txt
@@ -31,6 +31,9 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 	javahexeditor change log
 	------------------------
 
+29/12/2009 version 0.4.2.
+	Moved precompiled to swt 3.5.1, gcc 4.4.0.
+
 6/12/2009 version 0.4.1.
 	Bugfix: charset 8859-1 chars between 128 and 159 have length 0.
 
