Fix Help Dialog

--- a/javahexeditor/ReleaseNotes.txt
+++ b/javahexeditor/ReleaseNotes.txt
@@ -1,6 +1,6 @@
 
 javahexeditor, a java hex editor
-Copyright (C) 2006, 2009 Jordi Bergenthal, pestatije(-at_)users.sourceforge.net
+Copyright (C) 2006 - 2014 Jordi Bergenthal, pestatije(-at_)users.sourceforge.net
 The official javahexeditor site is sourceforge.net/projects/javahexeditor
 
 This program is free software; you can redistribute it and/or modify
@@ -18,14 +18,21 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
 
+
 javahexeditor installation notes
 --------------------------------
 
 See http://javahexeditor.sourceforge.net/userGuide.html or
 alternatively the userGuide.html file in the source code release.
 	
+	
 javahexeditor change log
 ------------------------
+
+29/12/2014 version 0.4.9.
+	Separated Eclipse plugin from standalong application.
+	Included standard OSGI and SWT jars for location and UI widgets.
+	New build process created separate self-contain "JavaHexEditor.jar" file for Linux (32-bit), Windows (32-bit) and Windows (64-bit) 
 
 29/12/2009 version 0.4.2.
 	Moved precompiled to swt 3.5.1, gcc 4.4.0.
